applet: Fix device_get_name() in the applet

g_dbus_proxy_call_sync returns a tuple with the results, not the results
directly. As such we first need to get the dictionary out of the tuple
before we can lookup the information in it.

https://bugzilla.gnome.org/show_bug.cgi?id=674414